alteração e inclusão corte

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "4e24968f",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n",
       "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
@@ -20,25 +22,160 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df_8596 = pd.read_excel(ar_xlsx.ar_96, usecols= ['CODPROD', 'DESCRICAO','OBS2', 'RUA', 'PREDIO', 'APTO', ])\n",
-    "df_286 = pd.read_excel(ar_xls.ar_86, usecols= ['Código', 'Estoque', 'Qtde Pedida', 'Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria', 'Custo real', 'Disponível'])\n",
+    "# PATH DAS BASES\n",
+    "p_sug = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\Wesley Henrique\\CALIBRAÇÃO FILIAL 11\\RUA 13 FINI\\SUGESTAO.txt'\n",
+    "p_movi = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\Wesley Henrique\\CALIBRAÇÃO FILIAL 11\\RUA 13 FINI\\MOVI.txt'\n",
+    "p_acesso = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\Wesley Henrique\\CALIBRAÇÃO FILIAL 11\\RUA 13 FINI\\acesso.xlsx'\n",
+    "p_prod = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\Wesley Henrique\\CALIBRAÇÃO FILIAL 11\\RUA 13 FINI\\PROD.xlsx'\n",
     "\n",
-    "df = df_8596.merge(df_286, left_on= 'CODPROD', right_on= 'Código', how= 'inner')\n",
-    "df = df[df['RUA'].between(1, 40)]\n",
-    "df['BLOQ + AV'] = df['Bloqueado(Qt.Bloq.-Qt.Avaria)'] + df['Qt.Avaria']\n",
-    "df['BLOQ?'] = np.where(df['BLOQ + AV'] >= df['Estoque'], 'S', 'N')\n",
-    "df['total_custo'] = df['Custo real'] * df['Disponível']\n",
+    "df_sug = pd.read_csv(p_sug, header= None, names= col_name.c82)\n",
+    "df_movi = pd.read_csv(p_movi, header= None, names= col_name.cMovi)\n",
+    "df_acesso = pd.read_excel(p_acesso, usecols= ['CODPROD', 'QTOS'])\n",
+    "df_prod = pd.read_excel(p_prod, usecols= ['CODPROD','OBS2', 'QTUNITCX', 'QTTOTPAL'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "baa3f5b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['COD', 'DESCRIÇÃO', 'EMBALAGEM', 'UNID.', 'DEP', 'RUA', 'PREDIO',\n",
+       "       'NIVEL', 'APTO', 'MÊS 1', 'MÊS 2', 'MÊS 3', 'TIPO', 'CAP', '1 DIA',\n",
+       "       'COM FATOR', 'VARIAÇÃO', '%'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['COD', 'MOVI', 'CLASSE'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CODPROD', 'QTOS'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CODPROD', 'OBS2', 'QTUNITCX', 'QTTOTPAL'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "COD           int64\n",
+       "DESCRIÇÃO    object\n",
+       "EMBALAGEM    object\n",
+       "UNID.        object\n",
+       "DEP           int64\n",
+       "RUA           int64\n",
+       "PREDIO        int64\n",
+       "NIVEL         int64\n",
+       "APTO          int64\n",
+       "MÊS 1         int64\n",
+       "MÊS 2         int64\n",
+       "MÊS 3         int64\n",
+       "TIPO         object\n",
+       "CAP           int64\n",
+       "1 DIA         int64\n",
+       "COM FATOR     int64\n",
+       "VARIAÇÃO      int64\n",
+       "%            object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "COD        int64\n",
+       "MOVI       int64\n",
+       "CLASSE    object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CODPROD    int64\n",
+       "QTOS       int64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CODPROD      int64\n",
+       "OBS2        object\n",
+       "QTUNITCX     int64\n",
+       "QTTOTPAL     int64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "\n",
-    "df = df.drop(columns=[\"Código\", \"Bloqueado(Qt.Bloq.-Qt.Avaria)\", \"Qt.Avaria\"])\n",
+    "display(df_sug.columns)\n",
+    "display(df_movi.columns)\n",
+    "display(df_acesso.columns)\n",
+    "display(df_prod.columns)\n",
+    "\n",
+    "display(df_sug.dtypes)\n",
+    "display(df_movi.dtypes)\n",
+    "display(df_acesso.dtypes)\n",
+    "display(df_prod.dtypes)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "baa3f5b5",
+   "execution_count": null,
+   "id": "d8e8cb22",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['COD', 'DESCRIÇÃO', 'EMBALAGEM', 'UNID.', 'DEP', 'RUA', 'PREDIO',\n",
+       "       'NIVEL', 'APTO', 'MÊS 1', 'MÊS 2', 'MÊS 3', 'TIPO', 'CAP', '1 DIA',\n",
+       "       'COM FATOR', 'VARIAÇÃO', '%', 'OBS2', 'QTUNITCX', 'QTTOTPAL', 'MOVI',\n",
+       "       'CLASSE', 'QTOS', 'PL_ATUAL', 'PD_SUG'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -60,244 +197,78 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CODPROD</th>\n",
-       "      <th>DESCRICAO</th>\n",
-       "      <th>OBS2</th>\n",
-       "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>APTO</th>\n",
-       "      <th>Estoque</th>\n",
-       "      <th>Qtde Pedida</th>\n",
-       "      <th>Disponível</th>\n",
-       "      <th>Custo real</th>\n",
-       "      <th>BLOQ + AV</th>\n",
-       "      <th>BLOQ?</th>\n",
-       "      <th>total_custo</th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESCRIÇÃO</th>\n",
+       "      <th>CAP</th>\n",
+       "      <th>QTTOTPAL</th>\n",
+       "      <th>PL_ATUAL</th>\n",
+       "      <th>PD_SUG</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>422950</td>\n",
-       "      <td>ABS INTIMUS GEL SUAVE S/ABAS 08UN</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>19</td>\n",
-       "      <td>53</td>\n",
-       "      <td>102</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.702667</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>473176</td>\n",
+       "      <td>CHICLE FINI 80GR MELANCIA</td>\n",
+       "      <td>390</td>\n",
+       "      <td>364</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>0.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>469639</td>\n",
-       "      <td>ABS PROT DIA INTIMUS DAYS 15UN IND PH</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>19</td>\n",
-       "      <td>62</td>\n",
-       "      <td>104</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.030592</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>1</th>\n",
+       "      <td>473165</td>\n",
+       "      <td>BALAS REGALIZ FINI 80GR TUBES TUTT FRUT</td>\n",
+       "      <td>424</td>\n",
+       "      <td>510</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>467799</td>\n",
-       "      <td>ABS PROT DIARIO DIANA 40UN</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>19</td>\n",
-       "      <td>63</td>\n",
-       "      <td>104</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.324375</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2</th>\n",
+       "      <td>473137</td>\n",
+       "      <td>BALAS REGALIZ FINI 80GR TUBES SORTIDOS</td>\n",
+       "      <td>424</td>\n",
+       "      <td>510</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>463202</td>\n",
-       "      <td>ABS SYM PREMIUM COB SECA C/ABAS 08UN</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>19</td>\n",
-       "      <td>33</td>\n",
-       "      <td>101</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.950717</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>473594</td>\n",
+       "      <td>BALAS GELAT FINI 80GR RATO</td>\n",
+       "      <td>390</td>\n",
+       "      <td>364</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>0.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>469877</td>\n",
-       "      <td>ACETONA LIMPS 95ML</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>25</td>\n",
-       "      <td>53</td>\n",
-       "      <td>104</td>\n",
-       "      <td>196.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>196.0</td>\n",
-       "      <td>25.500333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>4998.065268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13770</th>\n",
-       "      <td>468632</td>\n",
-       "      <td>WHISKY LAPHROAIG QUARTER CASK 750ML</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>13</td>\n",
-       "      <td>10</td>\n",
-       "      <td>202</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>374.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1874.166665</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13785</th>\n",
-       "      <td>461835</td>\n",
-       "      <td>WHISKY WHITE HORSE 700ML</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>7</td>\n",
-       "      <td>105</td>\n",
-       "      <td>201</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>33.571474</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13915</th>\n",
-       "      <td>469197</td>\n",
-       "      <td>XAROPE MONIN 700ML AVELA</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>7</td>\n",
-       "      <td>107</td>\n",
-       "      <td>105</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>34.175385</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13937</th>\n",
-       "      <td>469198</td>\n",
-       "      <td>XAROPE MONIN 700ML MANGA</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>7</td>\n",
-       "      <td>106</td>\n",
-       "      <td>203</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>34.200000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13938</th>\n",
-       "      <td>469200</td>\n",
-       "      <td>XAROPE MONIN 700ML MAPLE SPICE</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>7</td>\n",
-       "      <td>93</td>\n",
-       "      <td>103</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>34.200000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>239.400000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>473149</td>\n",
+       "      <td>MARSHMALLOW FINI 80GR CAMPING</td>\n",
+       "      <td>140</td>\n",
+       "      <td>126</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>0.43</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>724 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       CODPROD                              DESCRICAO OBS2  RUA  PREDIO  APTO  \\\n",
-       "86      422950      ABS INTIMUS GEL SUAVE S/ABAS 08UN   FL   19      53   102   \n",
-       "97      469639  ABS PROT DIA INTIMUS DAYS 15UN IND PH   FL   19      62   104   \n",
-       "99      467799             ABS PROT DIARIO DIANA 40UN   FL   19      63   104   \n",
-       "112     463202   ABS SYM PREMIUM COB SECA C/ABAS 08UN   FL   19      33   101   \n",
-       "137     469877                     ACETONA LIMPS 95ML   FL   25      53   104   \n",
-       "...        ...                                    ...  ...  ...     ...   ...   \n",
-       "13770   468632    WHISKY LAPHROAIG QUARTER CASK 750ML   FL   13      10   202   \n",
-       "13785   461835               WHISKY WHITE HORSE 700ML   FL    7     105   201   \n",
-       "13915   469197               XAROPE MONIN 700ML AVELA   FL    7     107   105   \n",
-       "13937   469198               XAROPE MONIN 700ML MANGA   FL    7     106   203   \n",
-       "13938   469200         XAROPE MONIN 700ML MAPLE SPICE   FL    7      93   103   \n",
+       "      COD                                DESCRIÇÃO  CAP  QTTOTPAL  PL_ATUAL  \\\n",
+       "0  473176                CHICLE FINI 80GR MELANCIA  390       364      1.07   \n",
+       "1  473165  BALAS REGALIZ FINI 80GR TUBES TUTT FRUT  424       510      0.83   \n",
+       "2  473137   BALAS REGALIZ FINI 80GR TUBES SORTIDOS  424       510      0.83   \n",
+       "3  473594               BALAS GELAT FINI 80GR RATO  390       364      1.07   \n",
+       "4  473149            MARSHMALLOW FINI 80GR CAMPING  140       126      1.11   \n",
        "\n",
-       "       Estoque  Qtde Pedida  Disponível  Custo real  BLOQ + AV BLOQ?  \\\n",
-       "86         0.0          0.0         0.0   12.702667        0.0     S   \n",
-       "97         0.0          0.0         0.0    4.030592        0.0     S   \n",
-       "99         0.0          0.0         0.0    5.324375        0.0     S   \n",
-       "112       14.0          0.0         0.0    2.950717       14.0     S   \n",
-       "137      196.0          0.0       196.0   25.500333        0.0     N   \n",
-       "...        ...          ...         ...         ...        ...   ...   \n",
-       "13770      5.0          0.0         5.0  374.833333        0.0     N   \n",
-       "13785      3.0          0.0         0.0   33.571474        3.0     S   \n",
-       "13915      0.0          0.0         0.0   34.175385        0.0     S   \n",
-       "13937      0.0          0.0         0.0   34.200000        0.0     S   \n",
-       "13938      8.0          0.0         7.0   34.200000        0.0     N   \n",
-       "\n",
-       "       total_custo  \n",
-       "86        0.000000  \n",
-       "97        0.000000  \n",
-       "99        0.000000  \n",
-       "112       0.000000  \n",
-       "137    4998.065268  \n",
-       "...            ...  \n",
-       "13770  1874.166665  \n",
-       "13785     0.000000  \n",
-       "13915     0.000000  \n",
-       "13937     0.000000  \n",
-       "13938   239.400000  \n",
-       "\n",
-       "[724 rows x 13 columns]"
+       "   PD_SUG  \n",
+       "0    0.26  \n",
+       "1    0.13  \n",
+       "2    0.09  \n",
+       "3    0.22  \n",
+       "4    0.43  "
       ]
      },
      "metadata": {},
@@ -305,12 +276,19 @@
     }
    ],
    "source": [
-    "df_os_esquecidos = df.loc[(df['OBS2'] == 'FL') & (df['Estoque'] > 0) & (df['BLOQ?'] == \"N\")]\n",
-    "df_fantasminha = df.loc[(df['OBS2'] == 'FL')]\n",
-    "df_hora_extra = df.loc[(df['OBS2'] != 'FL') & (df['Estoque'] == 0) & (df['Qtde Pedida'] == 0)]\n",
     "\n",
-    "display(df.loc[df['OBS2'] == 'FL'])\n",
-    "\n"
+    "df_movi = df_movi[['COD', 'MOVI', 'CLASSE']]\n",
+    "df_geral = df_sug.merge(df_prod, left_on='COD', right_on='CODPROD', how= 'left').drop(columns= 'CODPROD')\n",
+    "df_geral = df_geral.merge(df_movi, left_on= 'COD', right_on='COD', how= 'left')\n",
+    "df_geral = df_geral.merge(df_acesso, left_on= 'COD', right_on= 'CODPROD', how= 'left').drop(columns= 'CODPROD')\n",
+    "\n",
+    "\n",
+    "df_geral['PL_ATUAL'] = (df_geral['CAP'].astype(int) / df_geral['QTTOTPAL'].astype(int)).round(2)\n",
+    "df_geral['PL_SUG'] = (df_geral['COM FATOR'].astype(int) / df_geral['QTTOTPAL'].astype(int)).round(2)\n",
+    "var = df_geral[['COD', 'DESCRIÇÃO', 'CAP','QTTOTPAL', 'PL_ATUAL','PD_SUG']]\n",
+    "\n",
+    "display(df_geral.columns)\n",
+    "display(var.head())"
    ]
   }
  ],
