--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,8 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "4e24968f",
+   "execution_count": 38,
+   "id": "e460d394",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "path_mapa = r'c:\\Users\\wesley.oliveira\\Desktop\\PRODUTOS PARA TRANSFERENCIA.xlsx'\n",
+    "path_8596 = r'c:\\WS_OLIVEIRA\\BASE_DADOS\\8596 - Dados logistico produtos WMS.xlsx'\n",
+    "\n",
+    "df_96 = pd.read_excel(path_8596, usecols= ['CODPROD', 'DESCRICAO','OBS2','RUA','PREDIO','APTO'])\n",
+    "df_96['concat'] = df_96['RUA'].astype(str) + \"-\" + df_96['PREDIO'].astype(str) + \"-\" + df_96['APTO'].astype(str)\n",
+    "df_mapa = pd.read_excel(path_mapa, sheet_name= 'resalva')\n",
+    "\n",
+    "df = df_mapa.merge(df_96, left_on= 'cod', right_on= 'CODPROD', how= 'left')\n",
+    "df = df.drop(columns=['CODPROD', 'DESCRICAO', 'OBS2','RUA_x', 'PREDIO_x', 'NIVEL_B', 'APTO_x'])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c05e39d5",
    "metadata": {},
    "outputs": [
     {
@@ -27,300 +58,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>END</th>\n",
-       "      <th>COD</th>\n",
-       "      <th>DESCRIÇÃO</th>\n",
-       "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>NIVEL</th>\n",
-       "      <th>APTO</th>\n",
-       "      <th>ENTRADA</th>\n",
-       "      <th>SAIDA</th>\n",
-       "      <th>Retorno</th>\n",
-       "      <th>data_relatorio</th>\n",
+       "      <th>cod</th>\n",
+       "      <th>desc</th>\n",
+       "      <th>concat_x</th>\n",
+       "      <th>RUA_y</th>\n",
+       "      <th>PREDIO_y</th>\n",
+       "      <th>APTO_y</th>\n",
+       "      <th>concat_y</th>\n",
+       "      <th>validar</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000019</td>\n",
-       "      <td>472097</td>\n",
-       "      <td>DESCASCADOR DE FRUTAS E VEGETAIS KIT 3 P</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>201</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-02</td>\n",
+       "      <th>38</th>\n",
+       "      <td>465098</td>\n",
+       "      <td>BOLINHO BAUDUCCO 40GR DUPLO CHOCOLATE</td>\n",
+       "      <td>12-17-101</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>12-72-104</td>\n",
+       "      <td>divergente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1000024</td>\n",
-       "      <td>475052</td>\n",
-       "      <td>KIT SEDA SH300ML+COND190ML TOQUE DE SEDA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-02</td>\n",
+       "      <th>44</th>\n",
+       "      <td>469182</td>\n",
+       "      <td>BISC CORY 100GR RECH HIPOPO CHOCOLATE</td>\n",
+       "      <td>2-47-102</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>divergente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1001580</td>\n",
-       "      <td>436504</td>\n",
-       "      <td>BISC NESTLE 140GR PRESTIGIO RECH COCO</td>\n",
-       "      <td>2</td>\n",
-       "      <td>106</td>\n",
-       "      <td>4</td>\n",
-       "      <td>401</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-02</td>\n",
+       "      <th>49</th>\n",
+       "      <td>466397</td>\n",
+       "      <td>PAO DE FORMA BAUDUCCO 390GR INTEGRAL</td>\n",
+       "      <td>3-55-101</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>70-6-112</td>\n",
+       "      <td>divergente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1010019</td>\n",
-       "      <td>465180</td>\n",
-       "      <td>CREMOGEMA 550GR TRADICIONAL</td>\n",
-       "      <td>3</td>\n",
-       "      <td>45</td>\n",
-       "      <td>2</td>\n",
-       "      <td>202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>1020131</td>\n",
-       "      <td>448376</td>\n",
-       "      <td>BISC GALO 360GR CREAM CRACKER</td>\n",
-       "      <td>3</td>\n",
-       "      <td>80</td>\n",
-       "      <td>4</td>\n",
-       "      <td>402</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>1021399</td>\n",
-       "      <td>151701</td>\n",
-       "      <td>POLVILHO DOCE CAIPIRA 1KG</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>402</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1010372</td>\n",
-       "      <td>93701</td>\n",
-       "      <td>AZEITONA LA VIOLETERA VERDE 500GR</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>201</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1010429</td>\n",
-       "      <td>134501</td>\n",
-       "      <td>LEITE DE COCO MENINA 500ML</td>\n",
-       "      <td>5</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2</td>\n",
-       "      <td>202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1019005</td>\n",
-       "      <td>92801</td>\n",
-       "      <td>AZEITONA LA PREFERIDA VERDE 500GR</td>\n",
-       "      <td>5</td>\n",
-       "      <td>65</td>\n",
-       "      <td>3</td>\n",
-       "      <td>302</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1010504</td>\n",
-       "      <td>418776</td>\n",
-       "      <td>OLEO DE SOJA SOYA PET 900ML</td>\n",
-       "      <td>5</td>\n",
-       "      <td>72</td>\n",
-       "      <td>2</td>\n",
-       "      <td>201</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1024321</td>\n",
-       "      <td>464090</td>\n",
-       "      <td>MOLHO TOMATE GOIALLI SACHET 300GR MANJER</td>\n",
-       "      <td>6</td>\n",
-       "      <td>59</td>\n",
-       "      <td>5</td>\n",
-       "      <td>502</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>1022286</td>\n",
-       "      <td>433098</td>\n",
-       "      <td>AGUA MIN SAN PELLEGRINO C/GAS VIDRO 505M</td>\n",
-       "      <td>7</td>\n",
-       "      <td>70</td>\n",
-       "      <td>4</td>\n",
-       "      <td>402</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>1022369</td>\n",
-       "      <td>449129</td>\n",
-       "      <td>VINAGRE NEVAL 750ML MACA</td>\n",
-       "      <td>7</td>\n",
-       "      <td>99</td>\n",
-       "      <td>4</td>\n",
-       "      <td>402</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CHEIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1010563</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>5</td>\n",
-       "      <td>101</td>\n",
-       "      <td>2</td>\n",
-       "      <td>202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>VAZIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1043271</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>5</td>\n",
-       "      <td>66</td>\n",
-       "      <td>3</td>\n",
-       "      <td>303</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>VAZIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1021712</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>5</td>\n",
-       "      <td>48</td>\n",
-       "      <td>4</td>\n",
-       "      <td>401</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>VAZIO</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1024117</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>5</td>\n",
-       "      <td>66</td>\n",
-       "      <td>5</td>\n",
-       "      <td>502</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>VAZIO</td>\n",
-       "      <td>2025-09-03</td>\n",
+       "      <th>83</th>\n",
+       "      <td>452678</td>\n",
+       "      <td>COCO RALADO ADEL COCO 1KG ADOC FLOCOS UM</td>\n",
+       "      <td>12-72-104</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>12-81-102</td>\n",
+       "      <td>divergente</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        END     COD                                 DESCRIÇÃO  RUA  PREDIO  \\\n",
-       "0   1000019  472097  DESCASCADOR DE FRUTAS E VEGETAIS KIT 3 P    1       1   \n",
-       "10  1000024  475052  KIT SEDA SH300ML+COND190ML TOQUE DE SEDA    1       5   \n",
-       "16  1001580  436504     BISC NESTLE 140GR PRESTIGIO RECH COCO    2     106   \n",
-       "27  1010019  465180               CREMOGEMA 550GR TRADICIONAL    3      45   \n",
-       "36  1020131  448376             BISC GALO 360GR CREAM CRACKER    3      80   \n",
-       "39  1021399  151701                 POLVILHO DOCE CAIPIRA 1KG    4       7   \n",
-       "0   1010372   93701         AZEITONA LA VIOLETERA VERDE 500GR    5       6   \n",
-       "5   1010429  134501                LEITE DE COCO MENINA 500ML    5      34   \n",
-       "8   1019005   92801         AZEITONA LA PREFERIDA VERDE 500GR    5      65   \n",
-       "10  1010504  418776               OLEO DE SOJA SOYA PET 900ML    5      72   \n",
-       "22  1024321  464090  MOLHO TOMATE GOIALLI SACHET 300GR MANJER    6      59   \n",
-       "35  1022286  433098  AGUA MIN SAN PELLEGRINO C/GAS VIDRO 505M    7      70   \n",
-       "43  1022369  449129                  VINAGRE NEVAL 750ML MACA    7      99   \n",
-       "0   1010563       0                                   <VAZIO>    5     101   \n",
-       "1   1043271       0                                   <VAZIO>    5      66   \n",
-       "2   1021712       0                                   <VAZIO>    5      48   \n",
-       "3   1024117       0                                   <VAZIO>    5      66   \n",
+       "       cod                                      desc   concat_x  RUA_y  \\\n",
+       "38  465098     BOLINHO BAUDUCCO 40GR DUPLO CHOCOLATE  12-17-101   12.0   \n",
+       "44  469182     BISC CORY 100GR RECH HIPOPO CHOCOLATE   2-47-102    NaN   \n",
+       "49  466397      PAO DE FORMA BAUDUCCO 390GR INTEGRAL   3-55-101   70.0   \n",
+       "83  452678  COCO RALADO ADEL COCO 1KG ADOC FLOCOS UM  12-72-104   12.0   \n",
        "\n",
-       "    NIVEL  APTO  ENTRADA  SAIDA Retorno data_relatorio  \n",
-       "0       2   201        0      0   CHEIO     2025-09-02  \n",
-       "10      2   202        0      0   CHEIO     2025-09-02  \n",
-       "16      4   401        0      0   CHEIO     2025-09-02  \n",
-       "27      2   202        0      0   CHEIO     2025-09-02  \n",
-       "36      4   402        0      0   CHEIO     2025-09-02  \n",
-       "39      4   402        0      0   CHEIO     2025-09-02  \n",
-       "0       2   201        0      0   CHEIO     2025-09-03  \n",
-       "5       2   202        0      0   CHEIO     2025-09-03  \n",
-       "8       3   302        0      0   CHEIO     2025-09-03  \n",
-       "10      2   201        0      0   CHEIO     2025-09-03  \n",
-       "22      5   502        0      6   CHEIO     2025-09-03  \n",
-       "35      4   402        0      0   CHEIO     2025-09-03  \n",
-       "43      4   402        0      0   CHEIO     2025-09-03  \n",
-       "0       2   202        0      0   VAZIO     2025-09-03  \n",
-       "1       3   303        0      0   VAZIO     2025-09-03  \n",
-       "2       4   401        0      0   VAZIO     2025-09-03  \n",
-       "3       5   502        0      0   VAZIO     2025-09-03  "
+       "    PREDIO_y  APTO_y   concat_y     validar  \n",
+       "38      72.0   104.0  12-72-104  divergente  \n",
+       "44       NaN     NaN        NaN  divergente  \n",
+       "49       6.0   112.0   70-6-112  divergente  \n",
+       "83      81.0   102.0  12-81-102  divergente  "
       ]
      },
      "metadata": {},
@@ -328,47 +136,9 @@
     }
    ],
    "source": [
-    "from path_arquivos import *\n",
-    "import pandas as pd\n",
-    "import glob\n",
-    "import os\n",
+    "df['validar'] = np.where(df['concat_x'] == df['concat_y'], \"ok\", \"divergente\")\n",
     "\n",
-    "pasta = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\6.1.5 - Relatório Cheio x vazio\\RETORNO\\9-SETEMBRO'\n",
-    "arquivos = glob.glob(os.path.join(pasta, \"*\"))\n",
-    "lista = []\n",
-    "\n",
-    "for arquivo in arquivos:\n",
-    "    turista = pd.read_excel(arquivo,header= 2, sheet_name= 'RELATORIO')\n",
-    "    lista.append(turista)\n",
-    "\n",
-    "\n",
-    "df = pd.concat(lista, axis=0, ignore_index= False)\n",
-    "\n",
-    "df = df.loc[df['Retorno'] != \"SEM RETORNO\"]\n",
-    "df['data_relatorio'] = df['data_relatorio'].dt.strftime(\"%d-%m-%Y\")\n",
-    "df['data_relatorio'] = pd.to_datetime(df['data_relatorio'], format= \"%d-%m-%Y\")\n",
-    "\n",
-    "display(df)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "270106de",
-   "metadata": {},
-   "source": [
-    "SALVAR O RELATORIO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "9bb406a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "destino = r'C:\\WS_OLIVEIRA\\OUTPUT\\analitico_cheio_vazio.xlsx'\n",
-    "with pd.ExcelWriter(destino) as e:\n",
-    "    df.to_excel(e, index= False, sheet_name= \"analise\")"
+    "display(df.loc[df['validar'] == \"divergente\"])\n"
    ]
   }
  ],
